Fixed flickering UI elements. Added more robustness if the database errors. Moved main.js to js folder.

--- a/style/map.css
+++ b/style/map.css
@@ -1,5 +1,6 @@
 /* Map div */
 #map {
+    min-width: 750px;
     width: 70%;
     height: 50%;
 }
@@ -10,12 +11,12 @@
     background-color: rgba(255, 255, 255, 0.75);
     -webkit-filter: drop-shadow(0 1px 4px rgba(0,0,0,0.2));
     filter: drop-shadow(0 1px 4px rgba(0,0,0,0.2));
-    padding: 15px;
+    padding: 7px;
     border-radius: 10px;
     border: 1px solid #cccccc;
     bottom: 12px;
     left: -50px;
-    min-width: 70px;
+    min-width: 85px;
 }
 #map-datapoint-popup:after, #map-datapoint-popup:before {
     top: 100%;
